=================== Release 1.0 2017-03-01 =====================
Description
    * First version of the App.
Changes
    * Version 1.0 Build 01 (2017/03/01)
        * Added support for checking if the day is current or not, and allow editing based on that. (2017/02/23)
        * Added support for smart offset of a textfield which is hidden by the keyboard. (2017/02/23)
        * Added support for two types of floating message views. (2017/02/22)
        * Added support for overlay used to change the status of a task. (2017/02/22)
        * Added checks to edit a task only when the day is marked as open. (2017/02/22)
        * Added support for *ViewTask* view. (2017/02/21)
        * Maked the username field of data optional. (2017/02/21)
        * Changed the font to *Avenir Next Condensed*. (2017/02/21)
        * Some modifications to the L&F. (2017/02/21)
        * Some modifications to the L&F. Added support for a tab bar. (2017/02/21)
        * Added support for displaying if it's today, tomorrow or yesterday in dates. (2017/02/21)
        * Added support for having a color for each task state. (2017/02/20)
        * Added support for adding tasks. (2017/02/20)
        * New L&F. (2017/02/19)
        * Removed support to define the amount of categories and tasks, this must be done depending on the version of the App. And some aesthetic modifications too. (2017/02/19)
        * Added support for adding categories to a project. (2017/02/18)
        * Added support for showing start & close dates for each project listed. (2017/02/18)
        * Renamed the project to CoderToDo. (2017/02/18)
        * Corrected a bug when inserting the next working day. And removed support for adding tasks before the working day beguns. (2017/02/18)
        * Some very important corrections to the internal date keeping system. Corrected some mayor bugs with the dates and added support to add tasks BEFORE the working day beguns. (2017/02/18)
        * Added icons. (2017/02/17)