@@ -3,6 +3,7 @@ Description
     * First version of the App.
 Changes
     * Version 1.0 Build 01 (2017/03/01)
+        * Added support for PendingQueues in each project. Also added support for sanity checks when loading tasks. (2017/02/24)
         * Added support for checking if the day is current or not, and allow editing based on that. (2017/02/23)
         * Added support for smart offset of a textfield which is hidden by the keyboard. (2017/02/23)
         * Added support for two types of floating message views. (2017/02/22)
